[gd_scene load_steps=4 format=3 uid="uid://bqq38nb1qecjb"]

[ext_resource type="Texture2D" uid="uid://b3jtfqwuixldy" path="res://assets/buttons/icons/Home.png" id="1_0vq8w"]
[ext_resource type="Script" path="res://scripts/menu/navigation.gd" id="2_8sme3"]
[ext_resource type="PackedScene" uid="uid://4c8ywcidgjoy" path="res://scenes/windows/confirm_dialog_window.tscn" id="3_6n3h6"]

[node name="Home" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_0vq8w")
script = ExtResource("2_8sme3")

[node name="ConfirmDialogWindow" parent="." instance=ExtResource("3_6n3h6")]
visible = false
dialogText = "Salir sin guardar"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="acepted" from="ConfirmDialogWindow" to="." method="_on_confirm_dialog_window_acepted"]
[connection signal="canceled" from="ConfirmDialogWindow" to="." method="_on_confirm_dialog_window_canceled"]
